--- a/Cusrim.Core/Cusrim.Core.csproj
+++ b/Cusrim.Core/Cusrim.Core.csproj
@@ -48,7 +48,9 @@
     <Compile Include="Models\Student.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\FacultyDashboard.cs" />
     <Compile Include="ViewModels\FacultyRegistration.cs" />
+    <Compile Include="ViewModels\StudentDashboard.cs" />
     <Compile Include="ViewModels\StudentRegistration.cs" />
   </ItemGroup>
   <ItemGroup />
