--- a/Cusrim.Data/Cusrim.Data.csproj
+++ b/Cusrim.Data/Cusrim.Data.csproj
@@ -56,8 +56,13 @@
     <Compile Include="Migrations\202007310938463_test.designer.cs">
       <DependentUpon>202007310938463_test.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202008041037577_ReportUpdate.cs" />
+    <Compile Include="Migrations\202008041037577_ReportUpdate.designer.cs">
+      <DependentUpon>202008041037577_ReportUpdate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReportRepository.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="StudentRepository.cs" />
     <Compile Include="UserRepository.cs" />
@@ -76,6 +81,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202007310938463_test.resx">
       <DependentUpon>202007310938463_test.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008041037577_ReportUpdate.resx">
+      <DependentUpon>202008041037577_ReportUpdate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
