--- a/Cusrim.logic/Cusrim.logic.csproj
+++ b/Cusrim.logic/Cusrim.logic.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="FacultyLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReportLogic.cs" />
     <Compile Include="StudentLogic.cs" />
     <Compile Include="UserLogic.cs" />
   </ItemGroup>
