--- a/Cusrim/Cusrim.csproj
+++ b/Cusrim/Cusrim.csproj
@@ -349,6 +349,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Student\Dashboard.cshtml" />
+    <Content Include="Views\Faculty\ViewStudents.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
