--- a/Cusrim/Cusrim.csproj
+++ b/Cusrim/Cusrim.csproj
@@ -350,6 +350,8 @@
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Student\Dashboard.cshtml" />
     <Content Include="Views\Faculty\ViewStudents.cshtml" />
+    <Content Include="Views\Faculty\ViewAttached.cshtml" />
+    <Content Include="Views\Student\ReportDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
