--- a/Cusrim.Data/Cusrim.Data.csproj
+++ b/Cusrim.Data/Cusrim.Data.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="ApplicationDbContext.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="CompanyRepository.cs" />
     <Compile Include="FacultyRepository.cs" />
     <Compile Include="Migrations\202007212317354_InitialMigration.cs" />
     <Compile Include="Migrations\202007212317354_InitialMigration.designer.cs">
