--- a/Cusrim/Cusrim.csproj
+++ b/Cusrim/Cusrim.csproj
@@ -129,6 +129,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\FacultyController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\StudentController.cs" />
@@ -352,6 +353,10 @@
     <Content Include="Views\Faculty\ViewStudents.cshtml" />
     <Content Include="Views\Faculty\ViewAttached.cshtml" />
     <Content Include="Views\Student\ReportDetails.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Admin\CompanyDetails.cshtml" />
+    <Content Include="Views\Admin\facultyDetails.cshtml" />
+    <Content Include="Views\Admin\studentDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
