--- a/Cusrim.logic/Cusrim.logic.csproj
+++ b/Cusrim.logic/Cusrim.logic.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="CompanyLogic.cs" />
     <Compile Include="FacultyLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReportLogic.cs" />
